# AI535_DecisionTransformer

./: 10:06:2023_20:50:18_FetchSlide_metrics.json  11:06:2023_06:05:39_FetchPush_metrics.json  11:06:2023_10:06:33_FetchSlide_metrics.json  README.md  environment.yml  fetchslide_metrics.json  pyproject.toml  pyrightconfig.json  sbatch_cascades.sh  sbatch_dgx2.sh  server_inference.py  setup.cfg
expert_pick.pt/: config.json
json/: 11:06:2023_05:35:44_FetchPick_split_metrics.json  11:06:2023_05:48:03_FetchPush_split_metrics.json  11:06:2023_06:03:11_FetchPick_expert_metrics.json
new_json/: 13:06:2023_00:11:34_FetchReach_split_90_10_metrics.json  13:06:2023_00:15:59_FetchPush_split_90_10_metrics.json  13:06:2023_00:16:19_FetchPick_split_90_10_metrics.json  13:06:2023_00:17:22_FetchSlide_split_90_10_metrics.json  13:06:2023_02:18:04_FetchSlide_expert_metrics.json  13:06:2023_02:41:41_FetchReach_expert_metrics.json  13:06:2023_02:54:24_FetchPick_expert_metrics.json  13:06:2023_05:44:40_FetchPush_expert_metrics.json  13:06:2023_12:03:54_FetchPush_random_metrics.json  13:06:2023_12:04:13_FetchReach_random_metrics.json  13:06:2023_12:05:10_FetchPick_random_metrics.json  13:06:2023_12:05:53_FetchSlide_random_metrics.json
output/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
src/: app.py  decisionTransformerGymDataCollator.py
src/decision_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/main/: app.py  data_collator.py  make_loss_graph.py  model_assembler.py
